--- a/EPI-Index.Rmd
+++ b/EPI-Index.Rmd
@@ -25,7 +25,9 @@ epi_index %>%
   geom_point() + 
   facet_grid(~ region) + 
   theme(axis.text.x = element_blank()) +
-  geom_text(aes(label=country), size=2, nudge_y = -1) +
+ 
+   #geom_text(aes(label=country), size=2, nudge_y = -1) +
+  
   labs(title = "Current total EPI Index by Region", 
        subtitle = "Year 2018", 
        x = "Country",
@@ -42,8 +44,10 @@ epi_index %>%
   geom_point() + 
   facet_grid(~ region) + 
   theme(axis.text.x = element_blank()) +
-  geom_text(aes(label=country), size=4, nudge_y = -1) +
-  labs(title = "Current Air Quality Index by Region", 
+  
+  #geom_text(aes(label=country), size=4, nudge_y = -1) +
+ 
+   labs(title = "Current Air Quality Index by Region", 
        subtitle = "Year 2018", 
        x = "Country",
        y = "APE score")
@@ -55,18 +59,20 @@ country_snapshot <-
 clean_names()
 
 #Current EPI Index by region
-country_snapshot %>% 
-  group_by(region) %>%
-  arrange(desc(epi2018rank)) %>%
-  ggplot(aes(x = iso, y = land_area, color = region)) + 
-  geom_col() + 
-  facet_grid(~ region) +
-  theme(axis.text.x = element_blank()) +
-  geom_text(aes(label=country), size=2) +
-  scale_y_log10() +
-  labs(title = "Countries by Population & Land Area", 
-       subtitle = "Grouped by Region", 
-       x = "Land Area")
+# country_snapshot %>% 
+#   group_by(region) %>%
+#   arrange(desc(epi2018rank)) %>%
+#   ggplot(aes(x = iso, y = land_area, color = region)) + 
+#   geom_col() + 
+#   facet_grid(~ region) +
+#   theme(axis.text.x = element_blank()) +
+#   
+#   #geom_text(aes(label=country), size=2) +
+#   
+#   scale_y_log10() +
+#   labs(title = "Countries by Population & Land Area", 
+#        subtitle = "Grouped by Region", 
+#        x = "Land Area")
 ```
 
 
@@ -83,8 +89,10 @@ tcc_defo_top <-
   
   ggplot(tcc_defo_top, aes(x = country, y = average)) + 
   geom_col(width = 0.25) +
-  theme(axis.text.x = element_blank()) +
-  theme_minimal() +
+  
+  #theme(axis.text.x = element_blank()) +
+  
+    theme_minimal() +
   labs(title = "Average Tropical Deforestation Fires", 
        subtitle = "1997 - 2015",
        x = "Countries",
